--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "graphql": "^14.1.1",
     "graphql-2-json-schema": "^0.2.0",
     "graphql-json-schema": "^0.1.2",
+    "graphql-tools": "^7.0.3",
     "grunt": "^1.0.4",
     "grunt-compile-handlebars": "^2.0.2",
     "grunt-contrib-clean": "^2.0.0",
